# teacherease-parent-companion

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DISCLAIMER.md  README.md  biome.json  package.json  pnpm-lock.yaml  tauri-updater.pub  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-writer.md
.claude/hooks/: block-env-edits.sh  check-secrets.sh  dev-task-plan-mode.sh  format-after-write.sh
.claude/rules/: conventions.md  security.md  testing.md
.claude/skills/audit-components/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/dev-task/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/update-progress/: SKILL.md
.claude/skills/walkthrough/: SKILL.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
docs/: backlog.md  decisions.md  design-plan.md  fetch-pipeline-proposal.md  first-launch-macos.md  first-launch-windows.md  homework-followups.md  lessons.md  notify-pipeline-proposal.md  open-questions.md  progress.md  releasing.md  ui-architecture-proposal.md  updater-signing.md  user-guide.md
docs/audits/: audit-2026-05-04.md
scraper/: cookie-jar.ts  parser.test.ts  parser.ts  teacherease.test.ts  types.ts
scripts/: annotate-screenshot.mjs  bump-version.mjs  gen-icon.mjs  seed-dev-db.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/next-app/: pnpm-lock.yaml
src-tauri/src/: json_log.rs  keychain.rs  lib.rs  log_commands.rs  migrations.rs  scheduler.rs  smtp.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(shell)/: layout.tsx  page.tsx
src/app/settings/: page.tsx
src/app/setup/: page.tsx
src/components/: about-page.tsx  attention-section.tsx  child-switcher.tsx  child-tabs.tsx  classes-view.tsx  dashboard.tsx  empty-state.tsx  gmail-app-password-page.tsx  grades-table.tsx  header.tsx  history-view.tsx  homework-card.tsx  missing-work.tsx  needs-attention.tsx  progress-bar.tsx  recent-activity.tsx  settings-advanced.tsx  settings-appearance.tsx  settings-attention.tsx  settings-children.tsx  settings-email-section.tsx  settings-email.tsx  settings-fetch.tsx  settings-notifications.tsx  settings-view.tsx  standards-tree.tsx  status-dots.tsx  status-hero.tsx
src/components/settings/: section.tsx
src/components/shell/: disclaimer-gate.tsx  locale-provider.tsx  page-header.tsx  schedulers.tsx  settings-sidebar.tsx  sidebar-child-selector.tsx  sidebar.tsx  update-banner.tsx
src/components/theme/: theme-provider.tsx
src/components/ui/: switch.tsx
src/hooks/: use-selected-child.ts
src/lib/: hero-statuses.ts  i18n.ts  ipc.ts  legal.ts  utils.ts
tests/fixtures/: README.md  grades-page.html  login-page.html
tests/integration/: homework-live.integration.test.ts  homework-real-fixture.integration.test.ts  scraper-live.integration.test.ts  scraper-real-fixtures.integration.test.ts  v2-persistence-live.integration.test.ts
(+85 files in other folders)
