[package]
name = "app"
version = "0.1.10"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
chrono = "0.4.44"
dirs = "6.0.0"
open = "5"
# Used by scheduler.rs (Phase 31 / B-20 / Q36) for sleep_until + Notify.
# tauri::async_runtime re-exports tokio's Mutex/RwLock but not Notify or
# time::sleep_until, so we depend directly. Tauri pins its own tokio
# transitively; using compatible feature flags only (no version override).
tokio = { version = "1", features = ["sync", "time", "rt"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder", "hostname"] }

[dev-dependencies]
dotenvy = "0.15"
# B-22 — head-to-head scheduler tests use tokio::time::pause/advance and
# #[tokio::test(start_paused = true)] which are gated behind test-util.
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
